--- a/src/App.sass
+++ b/src/App.sass
@@ -67,16 +67,19 @@ $cor-tema: #057a61 // 00a884
 
   display: flex
   flex-direction: column
-  justify-content: space-around
+  justify-content: space-evenly
   align-items: center
 
   h3
     font-weight: normal
-    padding: 0px 40px 0 40px
+    // padding: 0px 40px 0 40px
     // background-color: #fda
+    min-height: 80px
+    width: 85%
 
     @media only screen and (max-width: 720px)
       padding: 20px 40px 20px 40px
+      min-height: 120px
 
   .css-sghohy-MuiButtonBase-root-MuiButton-root
     background-color: $cor-tema !important
@@ -93,12 +96,15 @@ $cor-tema: #057a61 // 00a884
 .opcoes-rotulo
 
   // background-color: #f0f
-  min-width: 80%
+  width: 85%
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
-  padding-bottom: 10px
+  margin-bottom: 10px
+
+  @media only screen and (max-width: 720px)
+    width: 95%
 
   .espaco-botoes
     margin: 5px
@@ -106,15 +112,16 @@ $cor-tema: #057a61 // 00a884
 
     @media only screen and (max-width: 720px)
       width: 97.5%
+      margin: 5px 0 5px 0px
   
   .categorias-crimes
 
     // background-color: #fde
-    min-width: 70%
+    // width: 100%
     display: flex
     flex-direction: row
     flex-wrap: wrap
-    justify-content: space-around
+    justify-content: space-evenly
     align-items: center
 
     @media only screen and (max-width: 720px)
