--- a/src/App.sass
+++ b/src/App.sass
@@ -140,3 +140,10 @@ $cor-tema: #057a61 // 00a884
 
       @media only screen and (max-width: 720px)
         width: 47.5%
+
+.css-79xub
+  border: 1px solid rgba(211, 47, 47, 0.5) !important
+  color: rgb(211, 47, 47) !important
+
+.css-1hw9j7s
+  background-color: $cor-tema !important
