--- a/src/App.sass
+++ b/src/App.sass
@@ -9,8 +9,9 @@ body
 main
   background-color: #ddd
   // color: #212121
-  min-width: 100%
-  min-height: 100vh
+  width: 100vw
+  height: 100vh
+  position: fixed
 
   display: flex
   flex-direction: row
