--- a/src/App.sass
+++ b/src/App.sass
@@ -79,10 +79,10 @@ $cor-tema: #057a61 // 00a884
     // padding: 0px 40px 0 40px
     // background-color: #fda
     min-height: 80px
-    width: 85%
+    width: 90%
 
     @media only screen and (max-width: 720px)
-      padding: 20px 40px 20px 40px
+      margin: 20px 40px 20px 40px
       min-height: 120px
 
   .css-sghohy-MuiButtonBase-root-MuiButton-root
@@ -100,7 +100,7 @@ $cor-tema: #057a61 // 00a884
 .opcoes-rotulo
 
   // background-color: #f0f
-  width: 85%
+  width: 90%
   display: flex
   flex-direction: column
   justify-content: center
@@ -125,7 +125,7 @@ $cor-tema: #057a61 // 00a884
     display: flex
     flex-direction: row
     flex-wrap: wrap
-    justify-content: space-evenly
+    justify-content: space-between
     align-items: center
 
     @media only screen and (max-width: 720px)
