Ícone novo e ajuste em css

--- a/src/App.sass
+++ b/src/App.sass
@@ -11,12 +11,15 @@ main
   // color: #212121
   width: 100vw
   height: 100vh
-  position: fixed
+  // position: fixed
 
   display: flex
   flex-direction: row
   align-items: center
   justify-content: center
+
+  // @media only screen and (max-width: 720px)
+  //   align-items: flex-start
 
 $cor-tema: #057a61 // 00a884
 
